Bug 820831 - Turn on ContentScaleFactor calculation on Windows; r=jimm

MozReview-Commit-ID: 5rqTURsO839